fix spacing between openness, learning and generosity section (#1044)

--- a/src/components/sections/contact-box/contact-box.module.css
+++ b/src/components/sections/contact-box/contact-box.module.css
@@ -3,6 +3,7 @@
   padding: 0;
   width: 100%;
   max-width: var(--max-content-width-large);
+  padding: 2.25rem 0rem;
 }
 
 .contactBox__inner {
